--- a/src/HISTORY.txt
+++ b/src/HISTORY.txt
@@ -1,6 +1,12 @@
 History
 =======
 
+0.1.1 (Dec 31, 2013)
+---------------------
+* add html_theme_options['plugin_list'].
+* add tox test.
+* Python3 support.
+
 0.1.0 (Aug 25, 2013)
 ---------------------
 * first release
