Upgrade Reveal.js version to 3.0.0

--- a/src/HISTORY.txt
+++ b/src/HISTORY.txt
@@ -1,6 +1,10 @@
 History
 =======
 
+0.3.0(May 5, 2015)
+---------------------
+* Upgrade Reveal.js version to 3.0.0
+
 0.2.3(Jan 1, 2015)
 ---------------------
 * Exclude test code from installed packages
